@@ -20,3 +20,8 @@ But not this one:
 ----
 SELECT * FROM foobar
 ----
+
+include::empty.adoc[]
+
+
+liquibase-include::changeset.xml[labels='']
